[gd_scene load_steps=12 format=3 uid="uid://b6xvs4q4qwx01"]

[ext_resource type="Script" path="res://src/scripts/GUI.gd" id="1_t7guq"]
[ext_resource type="Texture2D" uid="uid://ycbm35vqo4cd" path="res://src/images/objects/GUI/table.png" id="2_ho3px"]
[ext_resource type="Texture2D" uid="uid://c866hjo2sdwv7" path="res://src/images/objects/GUI/heart_full.png" id="3_j3srx"]
[ext_resource type="Texture2D" uid="uid://be2kdajgf4tc7" path="res://src/images/objects/bottle/bottle.png" id="4_dmicv"]
[ext_resource type="PackedScene" uid="uid://1lrcm2xppu1v" path="res://src/scenes/game_over_screen.tscn" id="5_0er02"]

[sub_resource type="LabelSettings" id="LabelSettings_qsxt8"]
font_size = 43
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_odtgn"]
texture = ExtResource("2_ho3px")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tywnm"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2v6ok"]
bg_color = Color(0.545098, 0, 0.235294, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mpo0x"]
texture = ExtResource("2_ho3px")

[sub_resource type="LabelSettings" id="LabelSettings_mfuuf"]
font_size = 40
font_color = Color(0.305882, 0, 0.0941176, 1)

[node name="GUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_t7guq")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Life: 0000"
label_settings = SubResource("LabelSettings_qsxt8")

[node name="Node" type="Node" parent="MarginContainer"]

[node name="Panel" type="Panel" parent="MarginContainer/Node"]
anchors_preset = -1
anchor_top = 0.019
anchor_right = 0.31
anchor_bottom = 0.144
offset_left = -11.0
offset_top = -29.312
offset_right = -0.119995
offset_bottom = 37.688
theme_override_styles/panel = SubResource("StyleBoxTexture_odtgn")

[node name="heart1" type="Sprite2D" parent="MarginContainer/Node/Panel"]
position = Vector2(72.4, 54.25)
scale = Vector2(1.6, 1.6)
texture = ExtResource("3_j3srx")

[node name="heart2" type="Sprite2D" parent="MarginContainer/Node/Panel"]
position = Vector2(150.4, 54.25)
scale = Vector2(1.6, 1.6)
texture = ExtResource("3_j3srx")

[node name="heart3" type="Sprite2D" parent="MarginContainer/Node/Panel"]
position = Vector2(228.4, 54.25)
scale = Vector2(1.6, 1.6)
texture = ExtResource("3_j3srx")

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/Node/Panel"]
layout_mode = 0
offset_left = 25.0
offset_top = 83.85
offset_right = 282.0
offset_bottom = 94.85
theme_override_styles/background = SubResource("StyleBoxFlat_tywnm")
theme_override_styles/fill = SubResource("StyleBoxFlat_2v6ok")
show_percentage = false

[node name="Node2" type="Node" parent="MarginContainer"]

[node name="Panel" type="Panel" parent="MarginContainer/Node2"]
offset_left = 1164.0
offset_top = -20.0
offset_right = 1571.0
offset_bottom = 109.0
scale = Vector2(-1, 1)
theme_override_styles/panel = SubResource("StyleBoxTexture_mpo0x")

[node name="Label" type="Label" parent="MarginContainer/Node2"]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.888
anchor_top = 0.1
anchor_right = 0.98
anchor_bottom = 0.1
offset_left = 0.223938
offset_top = -28.8
offset_right = 0.039978
offset_bottom = 29.2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0000"
label_settings = SubResource("LabelSettings_mfuuf")
horizontal_alignment = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/Node2"]
position = Vector2(865, 44)
scale = Vector2(2.10672, 2.20842)
texture = ExtResource("4_dmicv")
hframes = 4
vframes = 4

[node name="Control" parent="." instance=ExtResource("5_0er02")]
modulate = Color(1, 1, 1, 0)
